feat: changing the style of chat, changing properties, now don't need to include assets

--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,7 @@
 	<!-- endbuild -->
 
 	<script type="text/javascript">
-		new Muow({
-			chat: false,
-		});
+		new Muow();
 	</script>
 </body>
 </html>
